--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.ts",
     "scripts": {
         "build": "npx tsc",
-        "start": "node dist.index.js",
+        "start": "node dist/index.js",
         "dev": "nodemon --files index.ts"
     },
     "prisma": {
@@ -23,6 +23,7 @@
         "express": "^4.18.2",
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.6.3",
         "prisma": "^5.5.2"
     },
     "devDependencies": {
@@ -32,7 +33,7 @@
         "@types/express": "^4.17.20",
         "@types/joi": "^17.2.3",
         "@types/jsonwebtoken": "^9.0.4",
-        "@types/node": "^20.8.9",
+        "@types/node": "^20.9.1",
         "concurrently": "^8.2.2",
         "nodemon": "^3.0.1",
         "ts-node": "^10.9.1",
