--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@prisma/client": "^5.5.2",
+        "@prisma/client": "^5.1.1",
         "bcrypt": "^5.1.1",
         "celebrate": "^15.0.1",
         "cors": "^2.8.5",
@@ -23,8 +23,7 @@
         "express": "^4.18.2",
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
-        "mysql2": "^3.6.3",
-        "prisma": "^5.5.2"
+        "mysql2": "^3.6.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.1",
@@ -36,6 +35,7 @@
         "@types/node": "^20.9.1",
         "concurrently": "^8.2.2",
         "nodemon": "^3.0.1",
+        "prisma": "^5.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     }
